# hermes-api-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
deploy/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs/: ARCHITECTURE.md  CASE_STUDY.md  ENDPOINTS.md  ROADMAP.md  openapi.yaml
examples/requests/: listing_dry_run.json  stage_resolve_images.json
infra/terraform/app/: main.tf  outputs.tf  providers.tf  variables.tf
scripts/: demo.sh
src/: http.rs  idempotency.rs  jobs.rs  main.rs  metrics.rs  models.rs  pipeline.rs  security.rs  supabase.rs
src/ebay/: auth.rs  config.rs  inventory.rs  listing.rs  mod.rs  offers.rs  taxonomy.rs
src/hsuf/: ingest.rs  measurements.rs  mod.rs  models.rs  transform.rs
src/llm/: mod.rs  tensorzero.rs
