[package]
name = "hermes-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
serde_with = "3"
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "brotli",
    "stream",
    "rustls-tls",
] }
dotenvy = "0.15"
once_cell = "1"
eyre = "0.6"
urlencoding = "2"
base64 = "0.22"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
serde_yaml = "0.9.34"
tower = "0.5.2"
axum = "0.8.6"
metrics-exporter-prometheus = "0.17.2"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
rand = { version = "0.9.2", features = ["std", "small_rng"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
